# cli-localize

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  agent-prompt.md  build.py  cli-localize.spec  cli_localize_main.py  pyproject.toml  xlat.spec  xlat_main.py
examples/: Localizable.strings  app_en.arb  sample.json  sample.po  sample.srt  sample.yml  strings.xml
tests/: test_android_xml_handler.py  test_arb_fixes.py  test_ibf_bugs.py  test_json_handler_array_notation.py  test_po_handler_fixes.py  test_srt_blank_lines.py  test_yaml_array_fix.py  test_yaml_handler.py
xlat/: __init__.py  batcher.py  cli.py  ibf_format.py  session.py
xlat/format_handlers/: __init__.py  android_xml.py  arb.py  base.py  ios_strings.py  json_handler.py  po.py  srt.py  yaml_handler.py
